# li-zhi-badge-maker

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  初始化环境.command  启动离职厂牌制作助手.command
.github/workflows/: windows-release.yml
examples/: sample_project.json
scripts/: export_sample.sh  run_gui.sh  setup_local.sh
src/: badge-renderer.js  index.html  main.js  renderer.js  styles.css
src/li_zhi_badge_maker/: __init__.py  cli.py  engine.py  gui.py  main.py  models.py  project_io.py  resources.py
tests/: test_engine.py
